<resources>
    <string name="app_name">SpareService</string>
    <string name="activity_inscription_nom_hint">Nom</string>
    <string name="activity_connexion_email_hint">Email</string>
    <string name="activity_connexion_subtitle">Bienvenue sur Spare Service\nConnectez vous</string>
    <string name="activity_connexion_mdp_hint">Mot de passe</string>
    <string name="activity_connexion_connect_button">Se connecter</string>
    <string name="activity_connexion_mdp_oublie_button">Mot de passe oublié</string>
    <string name="activity_connexion_inscrire_button">S\'inscrire</string>
    <string name="activity_connexion_subtitleInscription">Vous n\'avez pas de compte ?</string>
    <string name="activity_inscription_subtitle">Inscrivez-vous</string>
    <string name="activity_inscription_prenom_hint">Prénom</string>
    <string name="activity_inscription_email_hint">Email</string>
    <string name="activity_inscription_mdp_hint">Mot de passe</string>
    <string name="activity_inscription_confMdp_hint">Confirmation du mot de passe</string>
    <string name="activity_inscription_tel_hint">Téléphone</string>
    <string name="activity_navigation_reponse">Réponses</string>
    <string name="activity_navigation_demande">Demandes</string>
    <string name="activity_navigation_accueil">Page d\'accueil</string>
    <string name="activity_inscription_adresse_hint">N° + Adresse</string>
    <string name="activity_annonce_postuler_button">Postuler</string>
    <string name="activity_annonce_description_title">Description de l\'annonce</string>
    <string name="activity_annonce_detail_title">Detail Client</string>
    <string name="activity_annonce_resume_description_title">Description de l\'annonce</string>
    <string name="activity_annonce_resume_detail_title">Detail Client</string>
    <string name="activity_annonce_resume_horaire_title">Horaire</string>
    <string name="title_activity_slide_nav_bar">SlideNavBarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="activity_contrat_button">Valider</string>

</resources>
