<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InscriptionActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        android:src="@drawable/spareservicelogomini"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/activity_inscription_subtitle"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/activity_inscription_nom_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_inscription_nom_hint"
        android:inputType="text"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/activity_inscription_email_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_inscription_email_hint"
        android:inputType="text"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/activity_inscription_mdp_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_inscription_mdp_hint"
        android:inputType="text"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/activity_inscription_confMdp_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_inscription_confMdp_hint"
        android:inputType="text"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/activity_inscription_tel_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_inscription_tel_hint"
        android:inputType="text"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        />


    <Button
        android:id="@+id/activity_connexion_inscrire_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:textStyle="bold"
        android:background="@drawable/boundedbtn"
        android:text="@string/activity_connexion_inscrire_button"
        />

</LinearLayout>