<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ConnexionActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/activity_connexion_logo_image"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/spareservicelogomini"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/activity_connexion_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/activity_connexion_subtitle"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/activity_connexion_logo_image"
        />

    <EditText
        android:id="@+id/activity_connexion_email_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_connexion_email_hint"
        android:inputType="text"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/activity_connexion_subtitle"
        />

    <EditText
        android:id="@+id/activity_connexion_mdp_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_connexion_mdp_hint"
        android:inputType="textPassword"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/activity_connexion_email_edt"
        />

    <Button
        android:id="@+id/activity_connexion_connect_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:textStyle="bold"
        android:background="@drawable/boundedbtn"
        android:text="@string/activity_connexion_connect_button"
        app:layout_constraintTop_toBottomOf="@id/activity_connexion_mdp_edt"
        />

    <Button
        android:id="@+id/activity_connexion_mdp_oublie_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:textStyle="bold"
        android:background="@drawable/boundedbtn"
        android:text="@string/activity_connexion_mdp_oublie_button"
        app:layout_constraintTop_toBottomOf="@id/activity_connexion_connect_btn"
        />

    <TextView
        android:id="@+id/activity_connexion_no_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/activity_connexion_subtitleInscription"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/activity_connexion_mdp_oublie_btn"
        />

    <Button
        android:id="@+id/activity_connexion_inscrire_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:textStyle="bold"
        android:background="@drawable/boundedbtn"
        android:text="@string/activity_connexion_inscrire_button"
        app:layout_constraintTop_toBottomOf="@id/activity_connexion_no_account"
        />



</android.support.constraint.ConstraintLayout>