<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MissionDetailActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/activity_mission_detail_logo_image"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/activity_mission_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/activity_mission_detail_logo_image"
            android:textSize="50dp"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            tools:text="Title"
            />

        <TextView
            android:id="@+id/activity_mission_detail_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/activity_mission_detail_title"
            android:textSize="50dp"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            tools:text="Subtitle"
            />

        <TextView
            android:id="@+id/activity_mission_detail_description_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/activity_mission_detail_subtitle"
            android:textSize="25dp"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:textColor="@color/colorForestGreen"
            android:text="@string/activity_annonce_resume_description_title"
            />

        <TextView
            android:id="@+id/activity_mission_detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/activity_mission_detail_description_title"
            android:textSize="25dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:textColor="@color/colorAccent"
            tools:text="Description"
            />


        <TextView
            android:id="@+id/activity_mission_detail_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/activity_mission_detail_description"
            android:textSize="25dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:textColor="@color/colorForestGreen"
            android:text="@string/activity_annonce_resume_detail_title"
            />

        <TextView
            android:id="@+id/activity_mission_detail_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/activity_mission_detail_detail_title"
            android:textSize="25dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            tools:text="Detail"
            />

        <TextView
            android:id="@+id/activity_mission_detail_horaire_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textSize="25dp"
            android:gravity="center"
            android:textColor="@color/colorForestGreen"
            android:text="@string/activity_annonce_resume_horaire_title"
            app:layout_constraintTop_toBottomOf="@id/activity_mission_detail_detail"/>

        <TextView
            android:id="@+id/activity_mission_detail_horaire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="25dp"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            tools:text="Detail Horaire"
            app:layout_constraintTop_toBottomOf="@id/activity_mission_detail_horaire_title"/>

        <TextView
            android:id="@+id/activity_mission_detail_info_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textSize="25dp"
            android:gravity="center"
            android:textColor="@color/colorForestGreen"
            android:text="Informations\n(Facultatif)"
            app:layout_constraintTop_toBottomOf="@id/activity_mission_detail_horaire"/>

        <TextView
            android:id="@+id/activity_mission_detail_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="25dp"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            tools:text="Detail Informations"
            app:layout_constraintTop_toBottomOf="@id/activity_mission_detail_info_title"/>

        <Button
            android:id="@+id/activity_mission_detail_finaliser_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="75dp"
            android:layout_marginEnd="100dp"
            android:textStyle="bold"
            android:background="@drawable/boundedbtn"
            android:text="Finaliser"
            app:layout_constraintTop_toBottomOf="@id/activity_mission_detail_info"
            app:layout_constraintBottom_toBottomOf="parent"

            />

        <Button
            android:id="@+id/activity_mission_detail_annuler_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:background="@drawable/boundedbtn"
            android:text="Annuler"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/activity_mission_detail_timer"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            />



    </android.support.constraint.ConstraintLayout>

</ScrollView>
